--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <title>MY 1st mini_game</title>
+</head>
+
 <link rel="stylesheet" href="styles.css">
 <canvas id=c></canvas>
 <div id=stats><span id=score>0</span>/<span id=outOf>0</span></div>
